--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,5 @@
     <string name="dateTo">Date to</string>
     <string name="reloadData">Reload data</string>
     <string name="dataScrapperSettings">Data scrapper settings</string>
-    <string name="groups">Groups filter</string>
+    <string name="groups">Groups regex</string>
 </resources>
